[package]
name = "first_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
    "persistence",
] }
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.22"
winapi = { version = "0.3.9", features = ["winuser"] }
rand = "0.8.1"

toml = "0.8.19"
serde = { version = "1.0.214", features = ["derive"] }  # Add this line
linkme = "0.3.29"
typetag = "0.2.18"