[package]
name = "first_egui"
version = "0.1.0"
edition = "2021"

# TODO! This is a mess. I'll clean it up later.
[dependencies]
eframe = { version = "0.29.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
    "persistence",
] }
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.22"
winapi = { version = "0.3.9", features = ["winuser"] }
rand = "0.8.1"

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.93"
glam = "0.29.2"